test config change

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Luke Slipski's Github"
 title_separator          : "-"
 name                     : &name "Luke"
 description              : &description "MPH"
-url                      : https://lslipski.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://lslipski.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "lslipski.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
