--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,8 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  - title: "First-Level Analysis"
+    url: /first_level/
+
+  - title: "Second-Level Analysis"
+    url: /second_level/
