--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "CAN Lab"
 title_separator          : "-"
 name                     : &name "Cognitive and Affective Neuroscience Lab"
 description              : &description "Pain and Emotion at CU Boulder"
-url                      : https://lslipski.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://lslipski.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/about"
 repository               : "https://github.com/Lslipski/CANlab_help_examples"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
