added / to navigation.yml after URLs, added headers for first and second level pages

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,7 @@
 # main links links
 main:
-    
   - title: "First-Level Analysis"
-    url: /first_level
+    url: /first_level/
 
   - title: "Second-Level Analysis"
-    url: /second_level
+    url: /second_level/
