remove xml from footer, create setup page, attempt first embeded image

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,8 @@
 # main links links
 main:
+  - title: "Setup and System Requirements"
+    url: /setup/
+
   - title: "First-Level Analysis"
     url: /first_level/
 
