--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "CAN Lab"
-  avatar           : "profile.png"
+  avatar           : "siips1.png"
   bio              : "We investigate the brain pathways that underlie the generation and regulation of pain and emotion."
   location         : "Boulder, CO"
   employer         :
